# bottle

./: .env  .gitignore  Cargo.toml  Dockerfile
assets/: Thumbs.db  anonymous.afdesign  ban.afdesign  bottle.afdesign  delete.afdesign  icon.afdesign  reported.afdesign
migrations/2018-10-14-005040_schema/: down.sql  up.sql
migrations/2018-10-16-041220_schema/: down.sql  up.sql
migrations/2018-11-15-003136_0.2.2/: down.sql  up.sql
migrations/2018-11-15-174408_0.3.3/: down.sql  up.sql
migrations/2018-11-26-185913_1.0.0/: down.sql  up.sql
migrations/2018-12-10-215016_1.1.1/: down.sql  up.sql
migrations/2019-03-13-221548_1.2.2/: down.sql  up.sql
migrations/2019-05-08-043329_1.2.4/: down.sql  up.sql
res/: 404.hbs  404.html  bottle.html  contribution.html  footer.hbs  guild.html  home.hbs  home.html  home.tpl  notfound.html  particles.html  reportmade.html  user.hbs  user.html
res/img/: Thumbs.db
res/style/: home.css  main.css  notfound.css  reportmade.css  stats.css  user.css
src/: bottle.rs  data.rs  main.rs  model.rs  schema.rs  web.rs
