[package]
name = "bottled_discord"
version = "0.1.0"
authors = ["Thomas-QM <thomas@engineeringvirtue.net>"]

[features]
watch = ["handlebars-iron/watch"]

[dependencies]
typemap = "0.3.0"
serenity = "0.5.9"
r2d2 = "0.8.2"
time = "0.1"
chrono = "0.4"
uuid = { version = "0.6.5", features=["v4", "serde"] }
diesel = { version = "1.0.0", features = ["postgres", "chrono", "r2d2", "uuid"] }
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0"
envy = "0.3.2"
kankyo = "0.2"

iron = "0.6.0"
params = "0.8.0"
mount = "0.4.0"
staticfile = "0.5.0"
iron-sessionstorage-0-6 = "0.6.6"
router = "0.6.0"
handlebars-iron = "0.27.0"
oauth2 = "1.3.0"
bincode = "1.0.1"
reqwest = "0.9.3"