[package]
name = "bottle"
version = "1.2.4"
authors = ["Thomas-QM <thomas@engineeringvirtue.net>"]

[dependencies]
typemap = "0.3.3"
discord_bots = "1.0.0"
serenity = "0.5.13"
r2d2 = "0.8.4"
time = "0.1"
chrono = "0.4"
uuid = { version = "0.6.5", features=["v4", "serde"] }
diesel = { version = "1.4.2", features = ["postgres", "chrono", "r2d2", "uuid"] }
diesel_migrations = "1.4.0"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0"
envy = "0.4.0"
kankyo = "0.2"

simple-logging = "2.0.2"
log = "0.4.6"